# pjecz-casiopea-flask

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  worker.py
cli/: app.py
cli/commands/: alimentar_autoridades.py  alimentar_cit_categorias.py  alimentar_cit_dias_inhabiles.py  alimentar_cit_oficinas_servicios.py  alimentar_cit_servicios.py  alimentar_distritos.py  alimentar_domicilios.py  alimentar_materias.py  alimentar_modulos.py  alimentar_oficinas.py  alimentar_permisos.py  alimentar_roles.py  alimentar_usuarios.py  alimentar_usuarios_roles.py  cit_citas.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cmd_cit_citas.py  cmd_cit_clientes.py  cmd_cit_clientes_recuperaciones.py  cmd_cit_clientes_registros.py  cmd_db.py  cmd_migrar.py  cmd_usuarios.py  cmd_web_paginas.py  copiar_autoridades.py  copiar_cit_categorias.py  copiar_cit_citas.py  copiar_cit_clientes.py  copiar_cit_clientes_recuperaciones.py  copiar_cit_clientes_registros.py  copiar_cit_oficinas_servicios.py  copiar_cit_servicios.py  copiar_distritos.py  copiar_domicilios.py  copiar_oficinas.py  copiar_pag_pagos.py  copiar_pag_tramites_servicios.py  respaldar_autoridades.py  respaldar_distritos.py  (+3 more)
pjecz_casiopea_flask/: main.py  settings.py
pjecz_casiopea_flask/blueprints/autoridades/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/bitacoras/: models.py  views.py
pjecz_casiopea_flask/blueprints/cit_categorias/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/cit_citas/: forms.py  models.py  tasks.py  views.py
pjecz_casiopea_flask/blueprints/cit_clientes/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/cit_clientes_recuperaciones/: models.py  tasks.py  views.py
pjecz_casiopea_flask/blueprints/cit_clientes_registros/: models.py  tasks.py  views.py
pjecz_casiopea_flask/blueprints/cit_dias_inhabiles/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/cit_horas_bloqueadas/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/cit_oficinas_servicios/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/cit_servicios/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/distritos/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/domicilios/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/entradas_salidas/: models.py  views.py
pjecz_casiopea_flask/blueprints/materias/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/modulos/: models.py  views.py
pjecz_casiopea_flask/blueprints/oficinas/: forms.py  models.py  views.py
pjecz_casiopea_flask/blueprints/pag_pagos/: models.py  views.py
pjecz_casiopea_flask/blueprints/pag_tramites_servicios/: forms.py  models.py  views.py
pjecz_casiopea_flask/config/: extensions.py  firebase.py  settings.py
pjecz_casiopea_flask/lib/: curp_generator.py  pwgen.py  safe_string.py  tasks.py  universal_mixin.py
pjecz_casiopea_flask/services/: sendmail.py
services/: sendmail.py
services/templates/: reporte_oficina_citas_proximas.jinja2
sql/: alter-cit_servicios.sql
(+118 files in other folders)
