[tool.poetry]
name = "pjecz-casiopea-flask"
version = "0.1.0"
description = "Plataforma de administración del sistema de citas."
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^45.0.5"
email-validator = "^2.2.0"
flask = "^3.1.1"
flask-login = "^0.6.3"
flask-moment = "^1.0.6"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.5.1"
flask-wtf = "^1.2.2"
google-auth = "^2.40.3"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.24.0"
google-cloud-storage = "^3.2.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
jinja2 = "^3.1.6"
markdown = "^3.8.2"
openpyxl = "^3.1.5"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
pytz = "^2025.2"
rq = "^2.4.0"
sendgrid = "^6.12.4"
sqlalchemy = "^2.0.41"
sqlalchemy-utils = "^0.41.2"
tabulate = "^0.9.0"
unidecode = "^1.4.0"
uvicorn = "^0.35.0"
werkzeug = "^3.1.3"
wtforms = "^3.2.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
faker = "^37.4.2"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.4.1"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli.app:cli"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
