[project]
name = "pjecz-casiopea-flask"
version = "1.1.3"
description = "Plataforma de administración del sistema de citas."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Guillermo Valdes", email = "guillermo.valdes@pjecz.gob.mx" },
    { name = "Lucia Aranda", email = "lucia.aranda@pjecz.gob.mx" },
    { name = "Ricardo Valdes", email = "ricardo.valdes@pjecz.gob.mx" }
]
dependencies = [
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "google-auth>=2.52.0",
    "google-cloud>=0.34.0",
    "google-cloud-secret-manager>=2.28.0",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=26.0.0",
    "hashids>=1.3.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "rq>=2.8.0",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.46.0",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.2",
]

[dependency-groups]
dev = [
    "faker>=40.15.0",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
